--- a/sok_orb.ipynb
+++ b/sok_orb.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Задание\n",
-    "<img src=\"ngeBrzSQhdo.jpg\">"
+    "<img src=\"https://github.com/paantya/exoplanet-2017/blob/master/ngeBrzSQhdo.jpg?raw=true\">"
    ]
   },
   {
